--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     <script src="https://accounts.google.com/gsi/client" defer></script>
   </head>
   <body>
