--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>QuizCraft</title>
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     <script src="https://accounts.google.com/gsi/client" defer></script>
   </head>
